Fixes the missing background-color to card-header

--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -28,6 +28,7 @@ $card-list-gap: 10px !default;
   position: relative;
   z-index: 0; // with position: relative, avoid img transition issue with border-radius (overflow not hidden has expected)
   &-header {
+    background-color: $card-background-color;
     position: relative;
     &-title {
       margin: 0;
